# IAmail

./: .env.example  .gitignore  README.md  app_streamlit.py  pyproject.toml  requirements.txt
config/: settings.yaml
src/: __init__.py  actions.py  cli.py  extractor.py  indexer.py  ingestion.py  llm.py  mail_connector.py  query_engine.py  sqlite_vector_indexer.py  structured_store.py
tests/: __init__.py  run_actions_examples.py  run_extractor_examples.py  run_indexer_examples.py  run_query_engine_examples.py  run_streamlit_examples.py  run_structured_store_examples.py  run_sync_examples.py
